force-app/main/default/objects/InvoiceMilestone__c/InvoiceMilestone__c.object-meta.xml
<CustomObject>
    <label>Invoice Milestone</label>
    <nameField>
        <label>Invoice Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices Milestone</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>