force-app/main/default/objects/InvoiceMilestone__c/fields/ExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDate__c</fullName>
    <label>Expected Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>