force-app/main/default/objects/InvoiceMilestone__c/fields/IdFattureInCloud__c.field-meta.xml
<CustomField>
    <fullName>IdFattureInCloud__c</fullName>
    <label>Id Fatture In Cloud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>