force-app/main/default/objects/InvoiceMilestone__c/fields/InvoiceExternalCode__c.field-meta.xml
<CustomField>
    <fullName>InvoiceExternalCode__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the invoice code present on the company billing system</inlineHelpText>
    <label>Invoice External Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>