force-app/main/default/objects/InvoiceMilestone__c/fields/LastFetchTime__c.field-meta.xml
<CustomField>
    <fullName>LastFetchTime__c</fullName>
    <label>Last Fetch Time</label>
    <type>DateTime</type>
</CustomField>