force-app/main/default/objects/InvoiceMilestone__c/fields/StartSendEmailWorkflow__c.field-meta.xml
<CustomField>
    <fullName>StartSendEmailWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start SendEmail Workflow</label>
    <type>Checkbox</type>
</CustomField>