force-app/main/default/objects/InvoiceMilestone__c/fields/StatusIndicator__c.field-meta.xml
<CustomField>
    <fullName>StatusIndicator__c</fullName>
    <description>indicatore grafico dello stato della invoice milestone (Giallo per Draft e Da Fatturare, Rosso per Fattura Inviata. Verde per Fattura Pagata)</description>
    <formula>IMAGE( 
	IF( ISPICKVAL( Stage__c , &apos;Draft&apos;) , 
		&quot;https://nexusat--c.eu17.visual.force.com/resource/1489804808000/yellow?&quot;,  
			IF(ISPICKVAL( Stage__c , &apos;Da Fatturare&apos;), 
				&quot;https://nexusat--c.eu17.visual.force.com/resource/1489804808000/yellow?&quot;,  
					IF(ISPICKVAL( Stage__c , &apos;Fattura Inviata&apos;), 
						&quot;https://nexusat--c.eu17.visual.force.com/resource/1489804808000/red?&quot;,  
							IF(ISPICKVAL( Stage__c , &apos;Fattura Pagata&apos;), 
								&quot;https://nexusat--c.eu17.visual.force.com/resource/1572355500000/green&quot;, &quot;https://nexusat--c.eu17.visual.force.com/resource/1489804808000/red?&quot;) ) ) ) , 
&apos;Indicator&apos; , 20, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>