force-app/main/default/objects/InvoiceMilestone__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <description>Invoice Year</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>