force-app/main/default/objects/InvoiceMilestone__c/recordTypes/DecHitOneShot.recordType-meta.xml
<RecordType>
    <fullName>DecHitOneShot</fullName>
    <active>true</active>
    <label>DecHit OneShot</label>
</RecordType>