force-app/main/default/objects/InvoiceMilestone__c/recordTypes/DecHitRecursive.recordType-meta.xml
<RecordType>
    <fullName>DecHitRecursive</fullName>
    <active>true</active>
    <label>DecHit Recursive</label>
</RecordType>