force-app/main/default/objects/InvoiceMilestone__c/recordTypes/Idea75OneShot.recordType-meta.xml
<RecordType>
    <fullName>Idea75OneShot</fullName>
    <active>true</active>
    <label>Idea75 One Shot</label>
</RecordType>