force-app/main/default/objects/InvoiceMilestone__c/recordTypes/Idea75Recursive.recordType-meta.xml
<RecordType>
    <fullName>Idea75Recursive</fullName>
    <active>true</active>
    <label>Idea75 Recursive</label>
</RecordType>