force-app/main/default/objects/InvoiceMilestone__c/recordTypes/LinfaOneShot.recordType-meta.xml
<RecordType>
    <fullName>LinfaOneShot</fullName>
    <active>true</active>
    <label>Linfa One Shot</label>
</RecordType>