force-app/main/default/objects/InvoiceMilestone__c/recordTypes/LinfaRecursive.recordType-meta.xml
<RecordType>
    <fullName>LinfaRecursive</fullName>
    <active>true</active>
    <label>Linfa Recursive</label>
</RecordType>