force-app/main/default/objects/InvoiceMilestone__c/recordTypes/LinksOneShot.recordType-meta.xml
<RecordType>
    <fullName>LinksOneShot</fullName>
    <active>true</active>
    <label>Links One Shot</label>
</RecordType>