force-app/main/default/objects/InvoiceMilestone__c/recordTypes/LisOneShot.recordType-meta.xml
<RecordType>
    <fullName>LisOneShot</fullName>
    <active>true</active>
    <label>Lis One Shot</label>
</RecordType>