force-app/main/default/objects/InvoiceMilestone__c/recordTypes/LisRecursive.recordType-meta.xml
<RecordType>
    <fullName>LisRecursive</fullName>
    <active>true</active>
    <label>Lis Recursive</label>
</RecordType>