force-app/main/default/objects/InvoiceMilestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Year__c</columns>
    <columns>InvoiceExternalCode__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>ExpectedDate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>